fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
